Delete old images

--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@
 
 <section class="section">
   <h3>Featured Products</h3>
+  
   <div class="products">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1519744792095-2f2205e87b6f" />
+     <img src="https://via.placeholder.com/300x200?text=Men" alt="Men">
       <div class="card-content">
         <h4>Luxury Watch</h4>
         <p>Men's Classic</p>
@@ -78,7 +79,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1600180758890-6b94519a8ba6" />
+      <img src="https://via.placeholder.com/300x200?text=Women" alt="Women">
       <div class="card-content">
         <h4>Elegant Handbag</h4>
         <p>Women's Collection</p>
@@ -88,7 +89,7 @@
     </div>
 
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1599643478518-a784e5dc4c8f" />
+      <img src="https://via.placeholder.com/300x200?text=Accessories" alt="Accessories">
       <div class="card-content">
         <h4>Silver Bracelet</h4>
         <p>Unisex Style</p>
